--- a/TDFit/TDFit/LoginPage.xaml
+++ b/TDFit/TDFit/LoginPage.xaml
@@ -28,7 +28,7 @@
                                     <Frame BackgroundColor="AliceBlue" CornerRadius="50" HeightRequest="35" WidthRequest="35" Padding="0" HorizontalOptions="Start" Margin="7">
                                         <Image Source="https://cdn.pixabay.com/photo/2016/06/13/17/30/mail-1454731_960_720.png" Aspect="AspectFill" Margin="0" />
                                     </Frame>
-                                    <Entry x:Name="email" Placeholder="Email" TextColor="HotPink" HorizontalOptions="FillAndExpand" Margin="0,0,15,0"/>
+                                    <Entry Text="test123@wp.pl" x:Name="email" Placeholder="Email" TextColor="HotPink" HorizontalOptions="FillAndExpand" Margin="0,0,15,0"/>
                                 </StackLayout>
                             </Frame>
                             <Frame BackgroundColor="Transparent" BorderColor="DarkGray" Margin="0,15,0,0" Padding="0" CornerRadius="50" HorizontalOptions="FillAndExpand">
@@ -36,7 +36,7 @@
                                     <Frame BackgroundColor="AliceBlue" CornerRadius="50" HeightRequest="35" WidthRequest="35" Padding="0" HorizontalOptions="Start" Margin="7">
                                         <Image Source="https://cdn.pixabay.com/photo/2016/12/18/12/49/cyber-security-1915628_960_720.png" Aspect="AspectFill" Margin="0"/>
                                     </Frame>
-                                    <Entry x:Name="password" Placeholder="Hasło" IsPassword="True" TextColor="HotPink" HorizontalOptions="FillAndExpand" Margin="0,0,15,0"/>
+                                    <Entry Text="123456" x:Name="password" Placeholder="Hasło" IsPassword="True" TextColor="HotPink" HorizontalOptions="FillAndExpand" Margin="0,0,15,0"/>
                                 </StackLayout>
                             </Frame>
                         </StackLayout>
