--- a/TDFit/TDFit/LoseWeight.xaml
+++ b/TDFit/TDFit/LoseWeight.xaml
@@ -11,59 +11,60 @@
     </ContentPage.BindingContext>
 
 
-    <ContentPage.Content>
-        <StackLayout Margin="40">
-            <Frame 
+    <StackLayout Margin="40">
+        <Frame 
             Padding="10, 5, 10, 5"
             HasShadow="False"
             BorderColor="Blue"
             CornerRadius="30">
-                <Picker ItemDisplayBinding="{Binding Gender}" x:Name="genderEntry"
+            <Picker ItemDisplayBinding="{Binding Gender}" x:Name="genderEntry"
                     Title="Wybierz płeć:" 
                     ItemsSource="{Binding Calories}" HorizontalOptions="CenterAndExpand" />
+        </Frame>
+
+        <Grid>
+            <Frame
+            Padding="10, 5, 10, 5"
+            HasShadow="False"
+            BorderColor="Blue"
+            CornerRadius="30">
+                <Entry x:Name="weightEntry" Placeholder="Podaj swoją wagę:" HorizontalOptions="CenterAndExpand" Keyboard= "Numeric"  HorizontalTextAlignment="Center" ClearButtonVisibility="WhileEditing" />
             </Frame>
+        </Grid>
 
-            <Grid>
-                <Frame
+        <Grid>
+            <Frame
             Padding="10, 5, 10, 5"
             HasShadow="False"
             BorderColor="Blue"
             CornerRadius="30">
-                    <Entry x:Name="weightEntry" Placeholder="Podaj swoją wagę:" HorizontalOptions="CenterAndExpand" Keyboard= "Numeric"  HorizontalTextAlignment="Center" ClearButtonVisibility="WhileEditing" />
-                </Frame>
-            </Grid>
+                <Entry x:Name="growthEntry" Placeholder="Podaj swój wzrost:" HorizontalOptions="CenterAndExpand" Keyboard= "Numeric" HorizontalTextAlignment="Center" ClearButtonVisibility="WhileEditing" />
+            </Frame>
+        </Grid>
 
-            <Grid>
-                <Frame
-            Padding="10, 5, 10, 5"
-            HasShadow="False"
-            BorderColor="Blue"
-            CornerRadius="30">
-                    <Entry x:Name="growthEntry" Placeholder="Podaj swój wzrost:" HorizontalOptions="CenterAndExpand" Keyboard= "Numeric" HorizontalTextAlignment="Center" ClearButtonVisibility="WhileEditing" />
-                </Frame>
-            </Grid>
-
-            <Grid>
-                <Frame
+        <Grid>
+            <Frame
             Padding="10, 5, 10, 5"
             HasShadow="False"
             BorderColor="Gray"
             CornerRadius="30">
-                    <Entry x:Name="ageEntry" Placeholder="Podaj swój wiek:" HorizontalOptions="CenterAndExpand" Keyboard= "Numeric" HorizontalTextAlignment="Center" ClearButtonVisibility="WhileEditing" />
-                </Frame>
-            </Grid>
-            <Frame 
+                <Entry x:Name="ageEntry" Placeholder="Podaj swój wiek:" HorizontalOptions="CenterAndExpand" Keyboard= "Numeric" HorizontalTextAlignment="Center" ClearButtonVisibility="WhileEditing" />
+            </Frame>
+        </Grid>
+        <Frame 
             Padding="10, 5, 10, 5"
             HasShadow="False"
             BorderColor="Blue"
             CornerRadius="30">
-                <Picker ItemDisplayBinding="{Binding Activity}" x:Name="activityEntry"
+            <Picker ItemDisplayBinding="{Binding Activity}" x:Name="activityEntry"
                     Title="Wybierz swoją aktywność:" 
                     ItemsSource="{Binding Activities}" HorizontalOptions="CenterAndExpand" />
-            </Frame>
-            <Button Text="Oblicz" BackgroundColor="Blue" FontAttributes="Bold" 
+        </Frame>
+        <Button Text="Oblicz" BackgroundColor="Blue" FontAttributes="Bold" 
                 Clicked="OnCalculateClicked" CornerRadius="18" TextColor="White" />
-        </StackLayout>
+        <Button Text="Pokaż swoje zapotrzebowanie na makroskładniki" BackgroundColor="Blue" FontAttributes="Bold" 
+                Clicked="OnMacroClicked" CornerRadius="18" TextColor="White" />
 
-    </ContentPage.Content>
+    </StackLayout>
+
 </ContentPage>
