--- a/TDFit/TDFit/Views/TrainingDiary.xaml
+++ b/TDFit/TDFit/Views/TrainingDiary.xaml
@@ -92,7 +92,7 @@
 
                                     </Grid.ColumnDefinitions>
 
-                                    <Label Text="{Binding ServiceName, Mode=TwoWay}" Grid.Column="0" Grid.Row="0" Style="{DynamicResource detailTablet}"/>
+                                    <Label Text="{Binding Name, Mode=TwoWay}" Grid.Column="0" Grid.Row="0" Style="{DynamicResource detailTablet}"/>
                                     <Label Text="{Binding Series, Mode=TwoWay}" Grid.Column="1" Grid.Row="0" Style="{DynamicResource detailTablet}"/>
                                     <Label Text="{Binding Repeat, Mode=TwoWay}" Grid.Column="2" Grid.Row="0" Style="{DynamicResource detailTablet}"/>
                                     <Image x:Name="EditTraining"  HorizontalOptions="Start" Grid.Column="3" Grid.Row="0" Source="edit.png" HeightRequest="20" WidthRequest="20" Style="{DynamicResource ImgTablet}">
