--- a/TDFit/TDFit/Views/KeepWeight.xaml
+++ b/TDFit/TDFit/Views/KeepWeight.xaml
@@ -5,68 +5,85 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:TDFit.ViewModel"
              mc:Ignorable="d"
              x:Class="TDFit.KeepWeight"
-             BackgroundColor="GhostWhite">
+             BackgroundColor="LightGray">
     <ContentPage.BindingContext>
         <local:Gender></local:Gender>
      </ContentPage.BindingContext>
 
 
-    <ContentPage.Content>
-        <StackLayout Margin="40">
-            <Frame 
+
+    <StackLayout >
+        <Grid>
+            <StackLayout  >
+                <Frame BackgroundColor="LightBlue" HeightRequest="130" HorizontalOptions="FillAndExpand" Padding="0">
+                    <Image Source="tlo.jpg" Aspect="AspectFill"/>
+
+                </Frame>
+            </StackLayout>
+            <StackLayout Margin="15, 60, 15, 0">
+                <Frame BackgroundColor="White" HasShadow="True" HeightRequest="350" HorizontalOptions="FillAndExpand" CornerRadius="30">
+                    <StackLayout>
+                        <Label Text="Oblicz kalorie i makroskładniki" HorizontalOptions="CenterAndExpand" FontSize="18" FontAttributes="Bold" TextColor="Black"/>
+                        <Frame Margin="0,20,0,0"
             Padding="10, 5, 10, 5"
             HasShadow="False"
             BorderColor="Blue"
             CornerRadius="30">
-                <Picker ItemDisplayBinding="{Binding Gender}" x:Name="genderEntry"
+                            <Picker ItemDisplayBinding="{Binding Gender}" x:Name="genderEntry"
                     Title="Wybierz płeć:" 
                     ItemsSource="{Binding Calories}" HorizontalOptions="CenterAndExpand" />
-            </Frame>
+                        </Frame>
 
-            <Grid>
-                <Frame
+                        <Grid>
+                            <Frame
             Padding="10, 5, 10, 5"
             HasShadow="False"
             BorderColor="Blue"
             CornerRadius="30">
-                    <Entry x:Name="weightEntry" Placeholder="Podaj swoją wagę:" HorizontalOptions="CenterAndExpand" Keyboard= "Numeric"  HorizontalTextAlignment="Center" ClearButtonVisibility="WhileEditing" />
-                </Frame>
-            </Grid>
+                                <Entry x:Name="weightEntry" Placeholder="Podaj swoją wagę:" HorizontalOptions="CenterAndExpand" Keyboard= "Numeric"  HorizontalTextAlignment="Center" ClearButtonVisibility="WhileEditing" />
+                            </Frame>
+                        </Grid>
 
-            <Grid>
-                <Frame
+                        <Grid>
+                            <Frame
             Padding="10, 5, 10, 5"
             HasShadow="False"
             BorderColor="Blue"
             CornerRadius="30">
-                    <Entry x:Name="growthEntry" Placeholder="Podaj swój wzrost:" HorizontalOptions="CenterAndExpand" Keyboard= "Numeric" HorizontalTextAlignment="Center" ClearButtonVisibility="WhileEditing" />
-                </Frame>
-            </Grid>
+                                <Entry x:Name="growthEntry" Placeholder="Podaj swój wzrost:" HorizontalOptions="CenterAndExpand" Keyboard= "Numeric" HorizontalTextAlignment="Center" ClearButtonVisibility="WhileEditing" />
+                            </Frame>
+                        </Grid>
 
-            <Grid>
-                <Frame
-            Padding="10, 5, 10, 5"
-            HasShadow="False"
-            BorderColor="Gray"
-            CornerRadius="30">
-                    <Entry x:Name="ageEntry" Placeholder="Podaj swój wiek:" HorizontalOptions="CenterAndExpand" Keyboard= "Numeric" HorizontalTextAlignment="Center" ClearButtonVisibility="WhileEditing" />
-                </Frame>
-            </Grid>
-            <Frame 
+                        <Grid>
+                            <Frame
             Padding="10, 5, 10, 5"
             HasShadow="False"
             BorderColor="Blue"
             CornerRadius="30">
-                <Picker ItemDisplayBinding="{Binding Activity}" x:Name="activityEntry"
+                                <Entry x:Name="ageEntry" Placeholder="Podaj swój wiek:" HorizontalOptions="CenterAndExpand" Keyboard= "Numeric" HorizontalTextAlignment="Center" ClearButtonVisibility="WhileEditing" />
+                            </Frame>
+                        </Grid>
+                        <Frame 
+            Padding="10, 5, 10, 5"
+            HasShadow="False"
+            BorderColor="Blue"
+            CornerRadius="30">
+                            <Picker ItemDisplayBinding="{Binding Activity}" x:Name="activityEntry"
                     Title="Wybierz swoją aktywność:" 
                     ItemsSource="{Binding Activities}" HorizontalOptions="CenterAndExpand" />
-            </Frame>
-            <Button Text="Oblicz" BackgroundColor="Blue" FontAttributes="Bold" 
+                        </Frame>
+                    </StackLayout>
+
+                </Frame>
+            </StackLayout>
+            <StackLayout Margin="15, 450, 15, 0">
+                <Button Text="Oblicz" BackgroundColor="Blue" FontAttributes="Bold" 
                 Clicked="OnCalculateClicked" CornerRadius="18" TextColor="White" />
-            <Button Text="Pokaż swoje zapotrzebowanie na makroskładniki" BackgroundColor="Blue" FontAttributes="Bold" 
+                <Button Text="Pokaż swoje zapotrzebowanie na makroskładniki" BackgroundColor="Blue" FontAttributes="Bold" 
                 Clicked="OnMacroClicked" CornerRadius="18" TextColor="White" />
-            
-        </StackLayout>
-       
-    </ContentPage.Content>
+            </StackLayout>
+        </Grid>
+    </StackLayout>
+
+
 </ContentPage>
