--- a/TDFit/TDFit/Views/Profile.xaml
+++ b/TDFit/TDFit/Views/Profile.xaml
@@ -5,11 +5,19 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
              x:Class="TDFit.Views.Profile">
-    <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
-    </ContentPage.Content>
+
+
+
+    <StackLayout Padding="40,80,40,0">
+        <Entry x:Name="email" Placeholder="Email" FontSize="20"  PlaceholderColor="Gray"
+                   WidthRequest="300" HorizontalTextAlignment="Center"/>
+        <Entry x:Name="oldPassword" Placeholder="Stare hasło" FontSize="20" IsPassword="True" PlaceholderColor="Gray"
+                   WidthRequest="300" HorizontalTextAlignment="Center"/>
+        <Entry x:Name="newPassword" Placeholder="Nowe hasło" FontSize="20" IsPassword="True" PlaceholderColor="Gray" 
+                   WidthRequest="300" HorizontalTextAlignment="Center"/>
+        <Button Text="Zmień Hasło" CornerRadius="23" BackgroundColor="#439299" Margin="20" FontAttributes="Bold"
+                    Clicked="OnChangePasswordClicked" TextColor="Black"/>
+        <Label Text="Kontakt do Administratora: bartek101119@wp.pl" HorizontalTextAlignment="Center" Margin="20"/>
+    </StackLayout>
+    
 </ContentPage>
