--- a/TDFit/TDFit/Views/MainPage.xaml
+++ b/TDFit/TDFit/Views/MainPage.xaml
@@ -18,9 +18,12 @@
             </StackLayout>
             <StackLayout Margin="15, 110, 15, 0">
                 <Frame BackgroundColor="White" HasShadow="True" HeightRequest="450" HorizontalOptions="FillAndExpand" CornerRadius="15">
-                    <StackLayout Margin="0, 25, 0, 0" > 
+                    <StackLayout Margin="0, 0, 0, 0" > 
                         <!--<Button Text="Wyloguj" BackgroundColor="#439299" FontAttributes="Bold" HorizontalOptions="FillAndExpand"
                 Clicked="OnLogOut" CornerRadius="18" TextColor="Black" />-->
+                        <StackLayout Grid.Row="0">
+                            <Label Text="Strona główna" TextColor="Black" FontSize="Title" HorizontalOptions="Center"  FontAttributes="Bold" />
+                        </StackLayout>
                         <StackLayout Grid.Row="1">
                             <Button  Text="Podsumowanie" Clicked="OnSummaryClicked" BackgroundColor="DarkSlateBlue" TextColor="White"/>
                         </StackLayout>
@@ -38,6 +41,9 @@
                         </StackLayout>
                         <StackLayout Grid.Row="6" >
                             <Button Text="Kalkulator BMI" Clicked="OnBMIClicked"  BackgroundColor="CornflowerBlue" TextColor="White" />
+                        </StackLayout>
+                        <StackLayout Grid.Row="7" >
+                            <Button Text="Rozpiska diety" Clicked="OnKeepDietClicked"  BackgroundColor="SteelBlue" TextColor="White" />
                         </StackLayout>
                     </StackLayout>
                 </Frame>
