--- a/TDFit/TDFit/Views/Profile.xaml
+++ b/TDFit/TDFit/Views/Profile.xaml
@@ -15,8 +15,8 @@
                    WidthRequest="300" HorizontalTextAlignment="Center"/>
         <Entry x:Name="newPassword" Placeholder="Nowe hasło" FontSize="20" IsPassword="True" PlaceholderColor="Gray" 
                    WidthRequest="300" HorizontalTextAlignment="Center"/>
-        <Button Text="Zmień Hasło" CornerRadius="23" BackgroundColor="#439299" Margin="20" FontAttributes="Bold"
-                    Clicked="OnChangePasswordClicked" TextColor="Black"/>
+        <Button Text="Zmień Hasło" CornerRadius="23" BackgroundColor="Blue" Margin="20"  FontAttributes="Bold"
+                    Clicked="OnChangePasswordClicked" TextColor="White"/>
         <Label Text="Kontakt do Administratora: bartek101119@wp.pl" HorizontalTextAlignment="Center" Margin="20"/>
     </StackLayout>
     
