--- a/TDFit/TDFit/Views/CustomMaster.xaml
+++ b/TDFit/TDFit/Views/CustomMaster.xaml
@@ -46,15 +46,17 @@
                                     <ViewCell>
                                         <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand"
                                                  VerticalOptions="Center">
-                                            <Image Source="prof.png"
+                                            <Image Source="bicek.png"
                                                         HorizontalOptions="Start"
                                                         VerticalOptions="Center" Margin="15,0,5,2"
                                                         HeightRequest="25"
-                                                        WidthRequest="25"/>
+                                                        WidthRequest="25" />
+
                                             <Label Text="{Binding OptionName}" FontAttributes="Bold"
                                                FontSize="Default" Margin="10,0,5,2"
                                                HorizontalOptions="Start" VerticalOptions="Center"
                                                TextColor="#4a4848"/>
+                                           
                                         </StackLayout>
                                     </ViewCell>
                                 </DataTemplate>
