--- a/TDFit/TDFit/Views/DietPlan.xaml
+++ b/TDFit/TDFit/Views/DietPlan.xaml
@@ -4,22 +4,156 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:TDFit.CustomControls"
              mc:Ignorable="d"
-             x:Class="TDFit.Views.DietPlan">
+             x:Class="TDFit.Views.DietPlan"
+             BackgroundColor="LightGray">
 
-    <ContentPage.Resources>
-        <ResourceDictionary>
-            <local:DateConverter x:Key="DateConverter" />
-        </ResourceDictionary>
-    </ContentPage.Resources>
-    <StackLayout>
-        <ListView x:Name="listview" ItemsSource="{Binding KeepDietList} "
-            IsGroupingEnabled="true"
-            GroupDisplayBinding="{ Binding Date }">
-            <ListView.ItemTemplate>
+    <NavigationPage.TitleView>
+       
+        <StackLayout Margin="0,0,0,0">
+            <Grid>
+                <Label Text="Kcal:"  FontSize="Body" TextColor="White" Grid.Column="0" Grid.Row="0"/>
+                <Label Text="{Binding Sum}"  FontSize="Body" TextColor="White" Grid.Column="0" Grid.Row="1"/>
+
+                <Label Text="Białko (g):" FontSize="Body" TextColor="White" Grid.Column="1" Grid.Row="0"/>
+                <Label Text="{Binding SumProtein}" FontSize="Body" TextColor="White" Grid.Column="1" Grid.Row="1"/>
+
+                <Label Text="Węgl. (g):" FontSize="Body" TextColor="White" Grid.Column="2" Grid.Row="0"/>
+                <Label Text="{Binding SumCarbo}" FontSize="Body" TextColor="White" Grid.Column="2" Grid.Row="1"/>
+                
+                <Label Text="Tłusz. (g):" FontSize="Body" TextColor="White" Grid.Column="3" Grid.Row="0"/>
+                <Label Text="{Binding SumCarbo}" FontSize="Body" TextColor="White" Grid.Column="3" Grid.Row="1"/>
+            </Grid>
+        </StackLayout>
+    </NavigationPage.TitleView>
+
+    <StackLayout Margin="0,5,0,0" >
+        <ScrollView>
+            <StackLayout>
+                <StackLayout>
+                    
+                    <!--<BoxView HorizontalOptions="FillAndExpand" VerticalOptions="Center"
+                         HeightRequest="2" BackgroundColor="DarkGray"></BoxView>-->
+                    <Label Text="Śniadanie:" HorizontalOptions="Center" FontSize="Body" TextColor="Black" />
+
+                </StackLayout>
+        <ListView x:Name="listview" ItemsSource="{Binding KeepDietList} " BackgroundColor="AliceBlue" SelectionMode="None" >
+               
+                <ListView.ItemTemplate>
                 <DataTemplate>
-                    <TextCell Text="{Binding Name}" />
+                    <ViewCell>
+                            <Grid >
+                                    <StackLayout Margin="0,0,0,0" HorizontalOptions="Center" Grid.Column="2">
+                            <Label Text="{Binding Name}"  />
+                            </StackLayout>
+                                    <Image x:Name="RemoveTraining" HorizontalOptions="Start" Grid.Column="4" Source="delete.png" HeightRequest="20" WidthRequest="20" Style="{DynamicResource ImgTablet}">
+                                        <Image.GestureRecognizers>
+                                            <TapGestureRecognizer Tapped="RemoveTrainingTappedBreakfast" NumberOfTapsRequired="1"/>
+                                        </Image.GestureRecognizers>
+                                    </Image>
+                                </Grid>
+                        
+                    </ViewCell>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
+            </StackLayout>
+        </ScrollView>
+        <ScrollView>
+            <StackLayout>
+                <Label Text="II śniadanie:" HorizontalOptions="Center" FontSize="Body" TextColor="Black"/>
+                <ListView x:Name="listvieww" ItemsSource="{Binding KeepDietListDate} " BackgroundColor="AliceBlue" SelectionMode="None">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <ViewCell>
+                        <Grid >
+                                    <StackLayout Margin="0,0,0,0" HorizontalOptions="Center" Grid.Column="2">
+                                <Label Text="{Binding Name}"   />
+                            </StackLayout>
+                                    <Image x:Name="RemoveTraining" HorizontalOptions="Start" Grid.Column="4" Source="delete.png" HeightRequest="20" WidthRequest="20" Style="{DynamicResource ImgTablet}">
+                                        <Image.GestureRecognizers>
+                                            <TapGestureRecognizer Tapped="RemoveTrainingTappedSecondBreakfast" NumberOfTapsRequired="1"/>
+                                        </Image.GestureRecognizers>
+                                    </Image>
+                                </Grid>
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+            </StackLayout>
+        </ScrollView>
+        <ScrollView>
+            <StackLayout>
+                <Label Text="Obiad:" HorizontalOptions="Center" FontSize="Body" TextColor="Black"/>
+                <ListView x:Name="listviewww" ItemsSource="{Binding KeepDietListtt} " BackgroundColor="AliceBlue" SelectionMode="None">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <Grid >
+                                    <StackLayout Margin="0,0,0,0" HorizontalOptions="Center" Grid.Column="2">
+                                    <Label Text="{Binding Name}" />
+                                </StackLayout>
+                                    <Image x:Name="RemoveTraining" HorizontalOptions="Start" Grid.Column="4" Source="delete.png" HeightRequest="20" WidthRequest="20" Style="{DynamicResource ImgTablet}">
+                                        <Image.GestureRecognizers>
+                                            <TapGestureRecognizer Tapped="RemoveTrainingTappedDinner" NumberOfTapsRequired="1"/>
+                                        </Image.GestureRecognizers>
+                                    </Image>
+
+                                </Grid>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+            </StackLayout>
+        </ScrollView>
+        <ScrollView>
+            <StackLayout>
+                <Label Text="Podwieczorek:" HorizontalOptions="Center" FontSize="Body" TextColor="Black"/>
+                <ListView x:Name="listviewwww" ItemsSource="{Binding KeepDietListttt} " BackgroundColor="AliceBlue" SelectionMode="None">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <Grid >
+                                    <StackLayout Margin="0,0,0,0" HorizontalOptions="Center" Grid.Column="2">
+                                    <Label Text="{Binding Name}"  />
+                                </StackLayout>
+                                    <Image x:Name="RemoveTraining" HorizontalOptions="Start" Grid.Column="4" Source="delete.png" HeightRequest="20" WidthRequest="20" Style="{DynamicResource ImgTablet}">
+                                        <Image.GestureRecognizers>
+                                            <TapGestureRecognizer Tapped="RemoveTrainingTappedTea" NumberOfTapsRequired="1"/>
+                                        </Image.GestureRecognizers>
+                                    </Image>
+                                </Grid>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+            </StackLayout>
+        </ScrollView>
+        <ScrollView>
+            <StackLayout>
+                <Label Text="Kolacja:" HorizontalOptions="Center" FontSize="Body" TextColor="Black"/>
+                <ListView x:Name="listviewwwww" ItemsSource="{Binding KeepDietListtttt} " BackgroundColor="AliceBlue" SelectionMode="None">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <Grid >
+                                    <StackLayout Margin="0,0,0,0" HorizontalOptions="Center" Grid.Column="2">
+                                    <Label Text="{Binding Name}" />
+                                </StackLayout>
+                                    <Image x:Name="RemoveTraining" HorizontalOptions="Start" Grid.Column="4" Source="delete.png" HeightRequest="20" WidthRequest="20" Style="{DynamicResource ImgTablet}">
+                                        <Image.GestureRecognizers>
+                                            <TapGestureRecognizer Tapped="RemoveTrainingTappedSupper" NumberOfTapsRequired="1"/>
+                                        </Image.GestureRecognizers>
+                                    </Image>
+                                </Grid>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+            </StackLayout>
+        </ScrollView>
+
     </StackLayout>
+
+
+    
 </ContentPage>
